<resources>
    <string name="app_name">Vocabulary++</string>
    <string name="statistics">Statistics</string>
    <string name="learning">Learning</string>
    <string name="revision">Revision</string>
    <string name="remove_cards">Remove cards</string>
    <string name="tutorial">Tutorial</string>
    <string name="help"><![CDATA[Help & feedback]]></string>
    <string name="navigation_drawer_open">Open drawe</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="menu">Menu</string>
    <string name="add_file">Add file with vocabulary</string>
    <string name="add_one_vocabulary">Add one vocabulary</string>
    <string name="but_vocabulary">Buy more vocabulary</string>
    <string name="buy_vocabulary">Buy more vocabulary</string>
    <string name="you_learnt">You\'ve learnt</string>
    <string name="english_words">English words</string>
    <string name="top_known_words">Top known words</string>
    <string name="word">Word</string>
    <string name="correct_tries_perc">Correct/Tries</string>
    <string name="more">More</string>
    <string name="worst_known_words">Worst known words</string>
    <string name="add_one_new_word">Add one\nnew word</string>
    <string name="english_word">English word</string>
    <string name="translation">Translation</string>
    <string name="done">Done</string>
    <string name="one_word_error">You have to provide correct word</string>
    <string name="translation_error">You have to provide correct translation</string>
    <string name="add_one_vocabulary_success">Word %1$s successfully added</string>
    <string name="another_one">Another one?</string>
    <string name="something_went_wrong">Something went wrong ;(</string>
    <string name="try_again">Try again</string>
    <string name="add_file_header">Select file\nwith\nnew words</string>
    <string name="select">Select</string>
    <string name="why">Why?</string>
    <string name="adding_vocabulary">Adding new words in progress</string>
    <string name="add_file_error">Something went wrong ;(</string>
    <string name="add_file_success">Successfully added %1$d words</string>
    <string name="add_file_explanation">You have to provide CSV file in format word,translation.</string>
    <string name="select_file">Select file with new vocabulary</string>
    <string name="no_file_explorer">You have to have at least one file explorer installed!</string>
    <string name="buy_vocabulary_header">Buy additional\n4 000 words</string>
    <string name="buy_for">Buy for %1$s</string>
    <string name="buy_vocabulary_success">You successfully bought new words! Have fun!</string>
    <string name="buy_vocabulary_error">Something went wrong ;(</string>
</resources>
