<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    android:padding="@dimen/big_margin">

    <TextView
        android:id="@+id/add_one_vocabulary_popup_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/add_one_new_word"
        android:textColor="@color/white_85"
        android:textSize="@dimen/big_header" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_one_vocabulary_word_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <EditText
            android:id="@+id/add_one_vocabulary_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/english_word"
            android:imeOptions="actionNext"
            android:maxLength="40"
            android:nextFocusDown="@+id/add_one_vocabulary_translation"
            android:singleLine="true"
            android:textColor="@color/white_85"
            android:textColorHint="@color/white_55"
            android:textSize="@dimen/table_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_one_vocabulary_translation_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <EditText
            android:id="@+id/add_one_vocabulary_translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/translation"
            android:imeOptions="actionDone"
            android:maxLength="40"
            android:singleLine="true"
            android:textColor="@color/white_85"
            android:textColorHint="@color/white_55"
            android:textSize="@dimen/table_content" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/add_one_vocabulary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/btn_default"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingRight="@dimen/medium_padding"
            android:text="@string/done"
            android:textColor="@color/white_75" />

        <Button
            android:id="@+id/add_one_vocabulary_success_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/btn_default"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingRight="@dimen/medium_padding"
            android:text="@string/another_one"
            android:textColor="@color/white_75"
            android:visibility="gone" />

        <Button
            android:id="@+id/add_one_vocabulary_error_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/btn_error"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingRight="@dimen/medium_padding"
            android:text="@string/try_again"
            android:textColor="@color/white_75"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>