<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    android:padding="@dimen/big_margin">

    <TextView
        android:id="@+id/add_file_popup_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/medium_margin"
        android:ems="12"
        android:gravity="center"
        android:maxLength="40"
        android:padding="@dimen/big_margin"
        android:text="@string/add_file_header"
        android:textColor="@color/white_85"
        android:textSize="@dimen/big_header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/add_file_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="gone" />

        <Button
            android:id="@+id/add_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_default"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingRight="@dimen/medium_padding"
            android:text="@string/select"
            android:textColor="@color/white_75"
            android:visibility="visible" />

        <Button
            android:id="@+id/add_file_success_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_default"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingRight="@dimen/medium_padding"
            android:text="@string/another_one"
            android:textColor="@color/white_75"
            android:visibility="gone" />

        <Button
            android:id="@+id/add_file_error_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/btn_error"
            android:paddingLeft="@dimen/medium_padding"
            android:paddingRight="@dimen/medium_padding"
            android:text="@string/why"
            android:textColor="@color/white_75"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>