<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_add_vocabulary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:alpha="0.85"
        fab:menu_animationDelayPerItem="0"
        fab:menu_colorNormal="@color/colorAccent"
        fab:menu_colorPressed="@color/colorAccentPressed"
        fab:menu_colorRipple="@color/colorAccentRipple"
        fab:menu_labels_style="@style/MenuLabelsStyle"
        fab:menu_shadowColor="#444">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_add_one_vocabulary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"
            fab:fab_colorNormal="@color/green"
            fab:fab_colorPressed="@color/greenPressed"
            fab:fab_colorRipple="@color/greenRipple"
            fab:fab_label="@string/add_one_vocabulary" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_add_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_insert_drive_file_white_24dp"
            fab:fab_colorNormal="@color/purple"
            fab:fab_colorPressed="@color/purplePressed"
            fab:fab_colorRipple="@color/purpleRipple"
            fab:fab_label="@string/add_file" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_buy_vocabulary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_attach_money_white_24dp"
            fab:fab_colorNormal="@color/teal"
            fab:fab_colorPressed="@color/tealPressed"
            fab:fab_colorRipple="@color/tealRipple"
            fab:fab_label="@string/buy_vocabulary" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>